# microgradpp

./: .clang-tidy  CMakeLists.txt  README.md
src/: main.cpp  mlp.cpp  mlp.hpp  utils.cpp  utils.hpp  value.cpp  value.hpp
tests/: test_value.cpp
